워크스루 페이지 구현!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,14 @@
 <resources>
     <string name="app_name">이상형 월드컵</string>
+
     <string name="WalkThroughMainText1">끌리는 피클을 고르고</string>
+    <string name="WalkThroughMainText2">더 좋은 후보를 PICK!</string>
+    <string name="WalkThroughMainText3">선택한 후보의 승률은?</string>
+    <string name="WalkThroughMainText4">당신이 만드는 피클!</string>
+
     <string name="WalkThroughSubText1">다양한 카테고리의 주제들</string>
-    <string name="title_activity_walk_through">WalkThroughActivity</string>
-    <string name="tab_text_1">Tab 1</string>
-    <string name="tab_text_2">Tab 2</string>
-    <string name="title_activity_test">TestActivity</string>
+    <string name="WalkThroughSubText2">다양한 카테고리의 주제들</string>
+    <string name="WalkThroughSubText3">다양한 카테고리의 주제들</string>
+    <string name="WalkThroughSubText4">다양한 카테고리의 주제들</string>
+    <string name="WalkThroughImageContentDescription">WalkThroughImage</string>
 </resources>
