--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="WalkThroughSubText4">다양한 카테고리의 주제들</string>
     <string name="WalkThroughImageContentDescription">WalkThroughImage</string>
     <string name="walkthrough_button">시작하기</string>
+    <string name="ranking">랭킹</string>
 </resources>
